--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,2 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,700&display=swap"); */
 @import url(../src/reset.css);
